# Franca

./: .gitignore  COREML_DEPLOYMENT.md  COREML_FORMATS_GUIDE.md  EVALUATION_README.md  LICENSE_DATASET  LICENSE_MODEL  Makefile  README.md  dataset_prep.md  downstream.md  evaluation_report.json  hubconf.py  lint.sh  model_card.md  pyproject.toml  requirements-convert.txt  training.md
.github/workflows/: convert.yml
assets/: labels.txt
franca/: __init__.py
franca/configs/: __init__.py  ssl_default_config.yaml
franca/configs/finetune/: vitb14_finetune.yaml  vitl14_finetune.yaml
franca/configs/train/IN21K/: vitb14.yaml  vitg14.yaml  vitl14.yaml
franca/configs/train/LAION/: vitg14.yaml  vitl14.yaml
franca/data/: __init__.py  adapters.py  augmentations.py  collate.py  loaders.py  masking.py  samplers.py  transforms.py
franca/data/datasets/: __init__.py  decoders.py  extended.py  image_net.py  image_net_22k.py  multishard_streamer.py
franca/distributed/: __init__.py
franca/eval/: __init__.py  knn.py  linear.py  linear_ood.py  log_regression.py  metrics.py  setup.py  utils.py  visualize_PCA.py
franca/fsdp/: __init__.py
franca/hub/: backbones.py  utils.py
franca/layers/: __init__.py  attention.py  block.py  dino_head.py  drop_path.py  layer_scale.py  mlp.py  mrl_dino_head.py  patch_embed.py  swiglu_ffn.py
franca/logging/: __init__.py  helpers.py
franca/loss/: __init__.py  koleo_loss.py  mrl_dino_loss.py  mrl_ibot_patch_loss.py
franca/models/: __init__.py  vision_transformer.py
franca/train/: __init__.py  ssl_meta_arch.py  train.py
franca/utils/: config.py  dtype.py  param_groups.py  utils.py
notebooks/: franca_coreml_evaluation.ipynb  model_format_comparison.ipynb  simple_evaluation.ipynb  test_setup.ipynb
notebooks/.ipynb_checkpoints/: franca_coreml_evaluation-checkpoint.ipynb
rasa/: README.md  dataset_rasa.md
rasa/data/: utils.py
rasa/data/VOCdevkit/: vocdata.py
rasa/data/coco/: coco_data_module.py
rasa/data/imagenet/: imagenet_data_module.py  imagenet_data_module_webdataset.py
rasa/experiments/: rasa_config_dev.yml  train_rasa.py  utils.py
rasa/experiments/configs/: rasa_dito.yml  rasa_franca.yml
rasa/src/: rasa.py  rasa_head.py  transforms.py
scripts/: compare_model_formats.py  download_checkpoint.py  evaluate_coreml.py  export_coreml.py  export_coreml_hub.py  modify_ckpt_highres.py  quick_eval.py  test_coreml_model.py  upload_gh_ckpt.sh  validate_conversion.py
scripts/In-21K/: franca-B.sh  franca-G.sh  franca-L.sh
scripts/LAION/: franca-G.sh  franca-L.sh
scripts/eval/: eval_knn.sh  eval_linear.sh
